--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple firebase app",
   "main": "index.js",
   "scripts": {
-    "test": "npm test",
+    "test": "vitest --coverage",
     "prepare": "husky install",
     "lint": "npx eslint ./"
   },
@@ -24,6 +24,7 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "vitest": "^0.19.1"
   }
 }
